--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "http": "^0.0.1-security",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
+    "mongoose": "^5.9.29",
+    "morgan": "^1.10.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
